// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component does not render when name is empty 1`] = `
<div>
  



</div>
`;

exports[`Input Component renders with optional attributes 1`] = `
<div>
  


	
  <input
    class="ct-input ct-theme-dark ct-input--is-invalid custom-class"
    data-test="true"
    disabled=""
    id="input-id"
    name="test-input"
    placeholder="Enter text here"
    required=""
    type="text"
    value="Sample text"
  />
  

</div>
`;

exports[`Input Component renders with required attributes 1`] = `
<div>
  


	
  <input
    class="ct-input ct-theme-light"
    name="test-input"
    type="text"
    value="Sample text"
  />
  

</div>
`;

exports[`Input Component strips HTML tags from attribute values 1`] = `
<div>
  


	
  <input
    class="ct-input ct-theme-light"
    data-test="<script>alert(1)</script>"
    name="test-input"
    type="text"
    value="Sample text"
  />
  

</div>
`;
